# method_of_find_suitable_room

./: README.md  pyproject.toml
src/: main.ipynb
src/5zhang/: __init__.py  main.ipynb
