[project]
name = "5zhang"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "nyatinte", email = "takumi.062757@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "ipywidgets>=8.0.6",
    "jupyter>=1.0.0",
    "pandas>=2.0.3",
    "seaborn>=0.12.2",
    "matplotlib>=3.7.1",
    "japanize_matplotlib>=1.1.3",
    "black>=23.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
